src/static/site/css/main.css
html {
  position: relative;
  min-height:100%;		/* For full height images */
}

body {
  padding-top: 40px; /* To jump over the fixed nav-bar */
  margin-bottom: 45px;
}

#base_footer {
  margin-top: 1ex;
  height: 40px;
  position: absolute;
  bottom: 0;
  width: 100%;
}

#base_footer > span {
  margin-left: auto;
  margin-right: auto;
}

.wflow-buttons,
.cond-buttons {
  border-top:1px solid rgba(0,0,0,.125);
  background-color: #f8f9fa;
}

#workflows-star {
  border: 1px solid rgba(0,0,0,.125);
}

.ontask-card {
  cursor: pointer;
  max-width: 350px;
  margin-bottom: 15px;
}

.ontask-ccard {
  cursor: pointer;
  max-width: 300px;
}

.ontask-card .card-body,
.ontask-ccard .card-body {
  min-height: 100px;
}

.legend-circle {
  width: .75em;
  height: .75em;
  border-radius: 50%;
  border: 1px solid darkgray;
  margin-top: 6px;
}

.column-type-number, .column-type-integer, .column-type-double {
  background: #aed2f0;
}
.column-type-string {
  background: #f1b1b1;
}
.column-type-boolean {
  background: #f1e09d;
}
.column-type-datetime {
  background: #a5dcbf;
}

.action-type-personalized-text,
[data-backcolor='personalized_text'] {
  background: #d1eebe;
}
.action-type-personalized-canvas-email,
[data-backcolor='personalized_canvas_email']  {
  background: #faf6c7;
}
.action-type-personalized-json ,
[data-backcolor='personalized_json'] {
  background: #f7d9bd;
}
.action-type-survey ,
[data-backcolor='survey'] {
  background: #aed2f0;
}
.action-type-todo-list ,
[data-backcolor='todo_list'] {
  background: #c46a71;
}

#preview-variables {
  background-color: rgba(0,0,0,.125);
}

.starter-template {
  padding: 40px 15px;
  text-align: center;
}

.footer {
  margin-top: 1ex;
  border-color: #e7e7e7;
}

.alert {
  /* margin-top: 55px; */
  margin-bottom: 0;
}

body>.navbar-transparent {
  /* background-color: transparent; */
  border-color: transparent;
  box-shadow: none;
}

.navbar-transparent .navbar-nav > .active > a {
  background-color: transparent;
}

.navbar-nav>.btn{
  margin-top:10px;
  margin-right: 1.7em;
}

.navbar-nav > li > a {
    font-size: 16px;
}

.navbar-brand {
    padding: 0px;
    margin: 0px;
}

.navbar-brand > img {
    float: left;
    height: 40px;
}

.navbar {
    padding: 0;
}

.navbar-toggler {
    margin-top: 2px;
    margin-bottom: 2px;
}

.btn {
    background-image: none;
    -webkit-box-shadow: 0px 1px 0px #ddd;
    -moz-box-shadow: 0px 1px 0px #ddd;
    box-shadow: 0px 1px 0px #ddd;
}

/* Home page styling */
.corporate-jumbo {
    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)),
      url("../img/banner.jpg");
    background-repeat: no-repeat;
    background-position: 80% center;
    /* background-attachment: fixed;*/
    -webkit-background-size: cover;
    background-size: cover;
    color: #f5f5f5;
    padding: 10em 0;
    margin-bottom: 0;
    height: 100%;
}

.corporate-jumbo .well {
    background-color: rgba(245, 245, 245, .7);
}

.corporate-jumbo p, .corporate-jumbo h1 {
    color: #eee;
    text-shadow: 0px 0px 2px black;
}

.corporate-jumbo p {
    font-weight: 500;
}

.corporate-jumbo .well legend {
    color: #333;
}

.corporate-jumbo > .container {
    display: block;
    /* position: absolute; */
    bottom: 2em;
    left: 15px;
}

.contact-banner {
    padding: 100px 0;
    background: #e0e0e0;
    margin-top: 100px;
}

.footer a:hover {
    text-decoration: none;
}

/* About page styling */
#sec1 {
    background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAJklEQVQIW2NkAIILFy78NzAwYATRjCABZEGwAEwFiA1WBlIOUwkA72gTdDIYVO4AAAAASUVORK5CYII=) repeat;
}

/* Profile page styling */
.profile-head {
    background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAJklEQVQIW2NkAIILFy78NzAwYATRjCABZEGwAEwFiA1WBlIOUwkA72gTdDIYVO4AAAAASUVORK5CYII=) repeat;
    padding: 70px 0px 30px 20px;
}
.profile-body {
    padding: 4px 0px;
}

.text-page {
    padding: 120px 0;
}

#map-outer {
    height: 440px;
    padding: 40px 20px;
    margin-bottom: 20px;
    background-color:#FFF
}

#map-container {
    height: 400px
}

.img-dim {
    opacity: 0.5;
    box-shadow: inset 0px 0px 64px 64px #EA1717, 0px 0px 4px 4px #EA1717;
}

/* Authentication forms */
.form-box form,
.form-box .form-message {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}

.form-box form .checkbox {
  margin-bottom: 10px;
}

.form-box form .checkbox {
  font-weight: normal;
}

.form-box form .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}

.row-top-border {
    border-top: 1px solid #bbb;
}

.row-bottom-border {
    border-bottom: 1px solid #bbb;
}

.form-box form .form-control:focus {
  z-index: 2;
}

/* Tweaks for JQuery QueryBuilder
/* Needed for QueryBuilder to expand width 100% */
#builder.form-inline {
  display: unset;
}
/* Clause var op value*/
.query-builder .rules-group-container {
    text-align:left;
}

/* Show the errors in a form in red */
.errorlist {
    color:red;
}

th.dt-body-center,
td.dt-body-center {
    text-align: center;
    }

table td,
#actioninrun-data td,
#action-table td,
#attribute-table td,
#column-selected-table td,
#column-table td,
#log-table td,
#scheduler-table td,
#sqlconn-instructor-table td,
#sqlconn-admin-table td,
#table-data td,
#transform-diagnostics-table td,
#transform-table td,
#view-table td,
#workflow-table td {
    vertical-align: middle;
}

/*.table {
  overflow-y: visible !important;
}*/
/* .DTFC_LeftBodyLiner {
  overflow-x: auto !important;
  width: unset !important;
}*/
/* For row operations in table view left fixed column */
div[aria-labelledby="rowMoreOperations"] {
  min-width: unset;
}
div[aria-labelledby="rowMoreOperations"] > a,
div[aria-labelledby="rowMoreOperations"] > button {
  width: 30px;
  padding-left: 1rem;
}

/* Needed to show summer note aligned to the left */
.note-editor.note-frame.panel .note-editing-area .note-editable {
    text-align: left;
}

/*
.dropdown-menu .btn {
    width:100%;
}

.dropdown-menu{
    max-height:300px;
    overflow-y:auto;
}
*/

/* Wflow name */
#wflow-name {
    padding: 0ex;
    background: #b9dbff;
}

mark {
    background-color: #dff0d8;
}

div.group-conditions > label:not([class*=active]) {
    opacity: 0.3;
}

.dt-center { text-align: center; }

table#attribute-table {
    margin-top: 20px;
}

#filter-set .dropdown-menu {
  left: 50%;
  right: auto;
  text-align: center;
  transform: translate(-50%, 0);
}
div.sol-container {
    display: table;
}

/* Fix placement of SOL inside modal */
.sol-container.sol-active .sol-selection-container {
    position: unset;
}

/* Spinner */
#div-spinner {
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   position: fixed;
   display: block;
   opacity: 0.7;
   background-color: #fff;
   z-index: 99;
   text-align: center;
}

#img-spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  z-index: 100;
}

td.operations a,
td.operations button {
    margin-top: 0.5ex;
}

.js-action-showurl > span.badge {
    padding: 2px 7px;
    font-size: 10px;
}


.tooltip {
    pointer-events: none;
}

.circle-solid, .circle {
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  font-size: 25px;
  line-height: 26px;
  text-align: center;
}

.circle {
  border: solid 1pt black;
  color: #000;
  background: #fff
}

.circle-solid {
  color: #fff;
  background: #000
}

/*
  TIMELINE style by http://totoprayogo.com/
  https://bootsnipp.com/snippets/xrKXW
*/
ul.timeline {
    list-style-type: none;
    position: relative;
}
ul.timeline:before {
    content: ' ';
    background: #d4d9df;
    display: inline-block;
    position: absolute;
    left: 29px;
    width: 2px;
    height: 100%;
    z-index: 400;
}
ul.timeline > li {
    margin: 20px 0;
    padding-left: 20px;
}
ul.timeline > li:before {
    content: ' ';
    background: white;
    display: inline-block;
    position: absolute;
    border-radius: 50%;
    border: 3px solid #22c0e8;
    left: 20px;
    width: 20px;
    height: 20px;
    z-index: 400;
}

